Updated project name

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,13 +2,13 @@ cmake_minimum_required(VERSION 3.5)
 
 set(CMAKE_CXX_STANDARD 23)
 
-project(C8Engine)
+project(YAC8I)
 
-add_executable(C8Engine
+add_executable(YAC8I
 	main.cpp
 
 	include/C8Engine.h
 	src/C8Engine.cpp
 )
 
-target_include_directories(C8Engine PRIVATE include)
+target_include_directories(YAC8I PRIVATE include olcPixelGameEngine)
