--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,10 @@ cmake_minimum_required(VERSION 3.5)
 
 set(CMAKE_CXX_STANDARD 23)
 
+if(APPLE)
+	add_subdirectory(3rdParty/raylib)
+endif()
+
 project(YAC8I)
 
 add_executable(YAC8I
@@ -11,4 +15,5 @@ add_executable(YAC8I
 	src/C8Engine.cpp
 )
 
-target_include_directories(YAC8I PRIVATE include olcPixelGameEngine)
+target_include_directories(YAC8I PRIVATE include 3rdParty/olcPixelGameEngine)
+target_link_libraries(YAC8I PRIVATE raylib)
