Removing olc from default engine and preparing for transition to new class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,8 @@ set(CMAKE_CXX_STANDARD 23)
 
 if(APPLE)
 	add_subdirectory(3rdParty/raylib)
+else()
+	set(C8ENGINE_FILES include/OlcC8Engine.h include/OlcC8Engine.cpp)
 endif()
 
 project(YAC8I)
@@ -13,6 +15,8 @@ add_executable(YAC8I
 
 	include/C8Engine.h
 	src/C8Engine.cpp
+
+	${C8ENGINE_FILES}
 )
 
 target_include_directories(YAC8I PRIVATE include 3rdParty/olcPixelGameEngine)
