--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
+[submodule "3rdParty/PixelEngine"]
+	path = 3rdParty/PixelEngine
+	url = https://github.com/Maniform/PixelEngine.git
 [submodule "3rdParty/chip8-roms"]
 	path = 3rdParty/chip8-roms
 	url = https://github.com/kripod/chip8-roms.git
-[submodule "3rdParty/olcPixelGameEngine"]
-	path = 3rdParty/olcPixelGameEngine
-	url = https://github.com/OneLoneCoder/olcPixelGameEngine.git
